<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_above="@+id/search_view"
    android:layout_below="@+id/footer_text"
    android:background="@drawable/back">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.dietandcalorietracker.MainActivity">

        <LinearLayout
            android:id="@+id/total_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                style="@style/fit_button_style"
                android:gravity="center_horizontal"
                android:text="@string/calorie_text"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/calorie_consume"
                style="@style/fit_button_style"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/colorAccent"
                android:textSize="60sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="110dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>


        <Button
            android:id="@+id/search_view"
            style="@style/fit_button_style"
            android:layout_below="@id/total_linear"
            android:text="@string/searchButton"
            android:textSize="18sp"/>


        <LinearLayout
            android:id="@+id/fit_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_view"
            android:layout_marginTop="110dp"
            android:gravity="bottom"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:id="@+id/slogan"
                style="@style/fit_button_style"
                android:gravity="center_horizontal"
                android:padding="3sp"
                android:text="@string/fit_slogan"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/fitTestButton"
                android:layout_width="220sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:text="@string/fitTestButton"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            style="@style/fit_button_style"
            android:layout_height="fill_parent"
            android:layout_below="@id/fit_linear"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/footer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:text="@string/made" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:gravity="center_horizontal|bottom"
                android:background="@android:color/darker_gray" />


            <TextView
                android:id="@+id/about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/about_us" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>





